Fixed chevron animation when expanding/collapsing items

--- a/src/app/motion-groups-display/motion-groups-display.component.sass
+++ b/src/app/motion-groups-display/motion-groups-display.component.sass
@@ -4,6 +4,13 @@
 $color-les-engages-class: 'Les Engagés-color'
 $open-vld-color-class: 'Open Vld'
 
+.rotated
+  transform: rotate(90deg)
+  transition: .3s
+
+.not-rotated
+  transition: .3s
+
 .motionGroupList
   display: flex
   width: 100%
