--- a/src/app/plenaries/plenaries.component.sass
+++ b/src/app/plenaries/plenaries.component.sass
@@ -5,6 +5,14 @@
 .searchBar
   margin-bottom: 2rem
 
+.rotated
+  transform: rotate(90deg)
+  transition: .3s
+
+.not-rotated
+  transition: .3s
+
+
 .plenariesHeader
   display: flex
   justify-content: center
